# classup

./: .dockerignore  .env.example  .gitignore  CLASSUP_SYSTEM_ARCHITECTURE.md  CLAUDE.md  ClassUp_Test_Cases.xlsx  ClassUp_Test_Cases_v2.xlsx  Dockerfile  FIRST_PROMPT.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260213_000001_initial_schema.py  20260214_000001_add_academic_models.py  20260217_000001_add_grade_levels.py  20260217_000002_migrate_grade_level_data.py  20260225_142516_83219bd20fe6_add_teacher_invitations_table.py  20260225_180356_8a3d0c306244_add_system_settings_table.py  20260225_200936_b501a59145b6_add_first_name_last_name_to_parent_.py  20260228_000001_update_daycare_fluids_template.py  20260228_000002_update_nap_duration_to_calculated.py  20260228_000003_add_other_activities_field.py  20260304_000001_add_announcements.py  20260304_000002_add_photo_shares.py  20260304_000003_add_document_shares.py  20260306_000001_add_billing_tables.py  20260306_000002_add_invoice_last_reminder_sent_at.py  20260318_110056_05d60405a4c5_add_subscription_tables.py  20260409_000001_add_timetable_tables.py  20260421_000001_add_platform_eft_payments.py  20260423_000001_add_audit_logs.py
app/: config.py  database.py  exceptions.py  help_content.py  main.py  rate_limit.py  templates_config.py
app/middleware/: __init__.py  audit.py  auth.py  i18n.py  subscription.py  tenant.py
app/models/: __init__.py  academic.py  announcement.py  attendance.py  audit.py  base.py  billing.py  document_share.py  file_entity.py  grade_level.py  import_job.py  invitation.py  message.py  notification.py  photo_share.py  report.py  school_class.py  student.py  subscription.py  system_settings.py  teacher_invitation.py  tenant.py  timetable.py  user.py  webhook.py
app/schemas/: __init__.py  announcement.py  attendance.py  auth.py  billing.py  common.py  document_share.py  file.py  grade_level.py  import_job.py  invitation.py  message.py  photo_share.py  report.py  school_class.py  student.py  tenant.py  timetable.py  user.py  webhook.py
app/services/: __init__.py  academic_service.py  announcement_service.py  attendance_service.py  audit_service.py  auth_service.py  billing_service.py  class_service.py  document_service.py  email_service.py  enrollment_template_service.py  (+21 more)
scripts/: create_super_admin.py  generate_test_cases_xlsx.py  seed.py  start.sh  startup.py
tests/: conftest.py
(+189 files in other folders)
