[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classup"
version = "2.0.0"
description = "Multi-tenant SaaS platform for managing schools, daycare centers, and early childhood education facilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "ClassUp Team"}
]
keywords = ["education", "school", "daycare", "saas", "multi-tenant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Authentication
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",

    # Templates
    "jinja2>=3.1.0",

    # Task Queue
    "arq>=0.26.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Email
    "resend>=2.0.0",

    # File Storage (S3/R2)
    "boto3>=1.35.0",

    # CSV Processing
    "pandas>=2.2.0",

    # Internationalization
    "babel>=2.16.0",

    # UUID7 support
    "uuid7>=0.1.0",

    # File type detection
    "python-magic-bin>=0.4.14;sys_platform=='win32'",
    "python-magic>=0.4.27;sys_platform!='win32'",

    # Redis
    "redis>=5.0.0",

    # Multipart form handling
    "python-multipart>=0.0.9",

    # Async utilities
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
classup = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
